--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
     <div id="topnav" class="row bg-white pg-lg-2 d-none d-lg-flex">
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
             <a href="{% url 'hub'%}" class="nav-link main-logo-link">
-                <h2 class="logo-font text-black my-0"><strong>Feast</strong></h2>
+                <h2 class="logo-font text-black my-0"><strong>TASTY HUB</strong></h2>
             </a>
         </div>
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
@@ -112,7 +112,7 @@
     </div>
     <div id="delivery-banner" class="row text-center">
         <div class="col bg-black text-white">
-            <h4 class="logo-font my-1">Free delivery on orders over £{{ free_delevery_threshold }}!</h4>
+            <h4 class="logo-font my-1">You can get a free delivery on orders over £{{ free_delevery_threshold }}!</h4>
         </div>
     </div>
 </header>
@@ -149,13 +149,7 @@
         {% block content %}
         {% endblock %}
     </main>
-    
-          
-                            
-    
-       
-
-    <!-- Footer -->
+     <!-- Footer -->
     <footer class="bg-light mt-5 py-4">
         <div class="container text-center">
             <p>&copy; 2025 TastyHub.</p>
