--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -63,11 +63,10 @@
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
             <a class="logo-font fw-bold nav-link text-black mr-5" href="#" id="all-products-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                All Food Items
+                All Items
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="#" class="dropdown-item">By Category</a>
-                <a href="{% url 'products' %}" class="dropdown-item">All Dishes</a>
+                <a href="{% url 'products' %}" class="dropdown-item">Show Items</a>
             </div>
         </li>
         <li class="nav-item dropdown">
